[package]
name = "animus-provider-claude"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "Claude Code CLI provider plugin for Animus"
repository = "https://github.com/launchapp-dev/animus-provider-claude"
homepage = "https://github.com/launchapp-dev/animus-cli"
readme = "README.md"
default-run = "animus-provider-claude"

[lib]
name = "animus_provider_claude"
path = "src/lib.rs"

[[bin]]
name = "animus-provider-claude"
path = "src/main.rs"

[dependencies]
animus-plugin-protocol   = { git = "https://github.com/launchapp-dev/animus-protocol", tag = "v0.1.8" }
animus-provider-protocol = { git = "https://github.com/launchapp-dev/animus-protocol", tag = "v0.1.8" }
animus-plugin-runtime    = { git = "https://github.com/launchapp-dev/animus-protocol", tag = "v0.1.8" }
animus-session-backend   = { git = "https://github.com/launchapp-dev/animus-protocol", tag = "v0.1.8" }

tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "process", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
futures = "0.3"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
